css/styles.css
:root {
	--iris: #4d5ae5;
	--ocean: #404bbf;
	--navy-blue: #2e2f42;
	--green: #31d0aa;
	--slate: #434455;
	--light-slate: #8e8f99;
	--cornflower: #e7e9fc;
	--cloud: #f4f4fd;
	--navy-blue-modal: rgba(46, 47, 66, 0.4);
	--grey: rgba(46, 47, 66, 0.7);
	--white: #fff;
	--dairy: #fcfcfc;
  --font-family: 'Roboto', sans-serif;
  --second-family: 'Raleway', sans-serif;
}

body {
  font-family: var(--font-family);
  font-size: 16px;
  letter-spacing: 0.02em;
  color: var(--slate);
  background-color: var(--white);
}

h1,
h2,
h3,
h4,
h5,
h6,
p{
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
}

ul {
  list-style-type: none;
}

button {
  cursor: pointer;
}

.header-nav-logo-link {
  font-family: var(--second-family);
  font-weight: 700;
  font-size: 18px;
  line-height: 1.16667;
  letter-spacing: 0.03em;
  color: var(--navy-blue);
  text-transform: uppercase;
}

.header-nav-logo-link-iris{
  color: var(--iris);
}

.header-nav-link {
  font-weight: 500;
  line-height: 1.5;
  color: var(--navy-blue);
}

.header-contacts-link {
  font-weight: 400;
  line-height: 1.5;
  color: var(--state);
}

.header-nav-link:hover,
.header-nav-link:focus,
.header-contacts-link:hover,
.header-contacts-link:focus {
  color: var(--ocean);
}

.hero {
  background-color: var(--navy-blue);
}
.hero-title {
  font-weight: 700;
  font-size: 56px;
  line-height: 1.07143;
  text-align: center;
  color: var(--white);
}

.hero-button {
  font-weight: 500;
  font-size: 16px;
  line-height: 1.5;
  letter-spacing: 0.04em;
  color: var(--white);
  background-color: var(--iris);
}

.hero-button:hover,
.hero-button:focus {
  background-color: var(--ocean);
}

.features-item-title {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  color: var(--navy-blue);
}

.features-item-text {
  font-size: 16px;
  line-height: 1.5;
  color: var(--slate);
}

.team {
  background-color: var(--cloud);
}

.team-title {
  font-weight: 700;
  font-size: 36px;
  line-height: 1.11111;
  text-align: center;
  color: var(--navy-blue);
}

.team-item {
  background-color: var(--white);
}

.team-item-worker {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  text-align: center;
  color: var(--navy-blue);
}

.team-item-job {
  line-height: 1.5;
  text-align: center;
  color: var(--slate);
}

.portfolio-title {
  font-weight: 700;
  font-size: 36px;
  line-height: 1.11111;
  text-align: center;
  color: var(--navy-blue);
}

.portfolio-item-title {
  font-weight: 500;
  font-size: 20px;
  line-height: 1.2;
  color: var(--navy-blue);
}

.portfolio-item-job {
  line-height: 1.5;
  color: var(--slate);
}

.page-footer {
  background-color: var(--navy-blue);
}

.page-footer-logo-link {
  font-weight: 700;
  font-size: 18px;
  line-height: 1.16667;
  letter-spacing: 0.03em;
  text-transform: uppercase;
  color: var(--cloud);
}

.page-footer-logo-link-iris {
  color: var(--iris);
}

.page-footer-text {
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
  color: var(--cloud);
}

